# screens

./: .gitignore  Arch.md  CMakeLists.txt  CMakePresets.json  EngineerLog.md  Plan.md  README.md  vcpkg.json
.github/workflows/: windows-build.yml
assets/shaders/: basic.frag  basic.vert  bloom_blur.frag  bloom_extract.frag  cpu_surreal.frag  environment.frag  environment.vert  fractal_surface.frag  fractal_surface.vert  fxaa.frag  particles.frag  particles.vert  passthrough.frag  tonemap.frag
assets/textures/: nz.ppm  py.ppm
docs/plans/: 2026-03-05-cpu-surreal-design.md  2026-03-05-cpu-surreal-implementation.md  2026-03-05-fractal-driven-visualization-design.md  2026-03-05-ssot-paths-design.md
scripts/: verify-ssot-paths.ps1
src/: Config.cpp  Config.h  DiagTest.h  Logger.h  Particles.cpp  Particles.h  SettingsDialog.cpp  SettingsDialog.h  Shader.cpp  Shader.h  SystemMonitor.cpp  SystemMonitor.h  Texture.cpp  Texture.h  main.cpp  renderer.cpp  renderer.h  resource.h  stb_image.h
src/engine/: DebugUtils.h  Engine.cpp  Engine.h  Math.cpp  Math.h
src/fractal/: FractalParams.h  FractalSignalProcessor.cpp  FractalSignalProcessor.h
src/glad/: glad.c  glad.h
src/graphics/: LayerCompositor.h  Mesh.cpp  Mesh.h  PostProcessConfig.h  Shader.cpp  Shader.h  Texture.h  VisualizerLayer.h
src/physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/settings/: CameraPanel.h  GeneralPanel.cpp  GeneralPanel.h  ISettingsPanel.h  LayerFXPanel.h  LayerLayoutPanel.h  MetricsPanel.h  MetricsPanelLogic.cpp  MetricsPanelLogic.h  SettingsHost.h  VisualEffectsPanel.h  VisualsPanel.cpp  VisualsPanel.h
src/visualizers/: CPUVisualizer.h  DiskVisualizer.h  FractalSurfaceVisualizer.cpp  FractalSurfaceVisualizer.h  GravityVisualizer.cpp  GravityVisualizer.h  IVisualizer.h  PhysicsVisualizer.h  RAMVisualizer.h  WindVisualizer.cpp  WindVisualizer.h
